--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Testimonial Section</title>
+  <title>Testimonials</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -19,6 +19,7 @@
       <p>I have been using this for a few weeks now and it has completely transformed my workflow.</p>
       <p class="author">- Jane Smith</p>
     </div>
+    
   </section>
 </body>
 </html>
