--- a/main.html
+++ b/main.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <section class="testimonials">
-    <h2>Testimonials</h2>
+  <div class="testimonials">
+    <h1>Testimonials</h1>
     
     <div class="testimonial">
       <p>This product is amazing! I highly recommend it to anyone in need of a solution like this.</p>
@@ -20,6 +20,6 @@
       <p class="author">- Jane Smith</p>
     </div>
     
-  </section>
+  </div>
 </body>
 </html>
